--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </div>
             </form>
         </div>
+        <a href="#" class="bottom-btn"></a>
     </section>
     <section>
         <div class="center">
@@ -85,12 +86,13 @@
 
         </div>
         <div class="page2-bottom">
-        <div class="square square-1"></div>
-        <div class="square square-2"></div>
-        <div class="square square-3"></div>
-        <div class="square square-4"></div>
-        <div class="square square-5"></div>
-    </div>
+            <div class="square square-1"></div>
+            <div class="square square-2"></div>
+            <div class="square square-3"></div>
+            <div class="square square-4"></div>
+            <div class="square square-5"></div>
+        </div>
+        <a href="#" class="bottom-btn"></a>
     </section>
     <section>
         <div class="top">
@@ -118,6 +120,8 @@
         <div class="page3-bottom">
 
         </div>
+        <a href="#" class="bottom-btn"></a>
+
     </section>
     <section>
         <div class="top">
@@ -137,7 +141,28 @@
             <div class="tree"></div>
 
         </div>
+        <a href="#" class="bottom-btn"></a>
     </section>
+</div>
+<div class="btn-wrap">
+    <ul>
+        <li>
+            <a href=""><span></span></a>
+            <div class="btn-tip"></div>
+        </li>
+        <li>
+            <a href=""><span></span></a>
+            <div class="btn-tip"></div>
+        </li>
+        <li>
+            <a href=""><span></span></a>
+            <div class="btn-tip"></div>
+        </li>
+        <li>
+            <a href=""><span></span></a>
+            <div class="btn-tip"></div>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
