--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <div class="header">
+    <div class="header max">
         <a href="" class="logo"></a>
         <a href="" class="index">首页</a>
         <a href="" class="index">产品介绍</a>
@@ -22,6 +22,22 @@
         <a href="" class="last">百度司南</a>
         <a href="" class="last">联系我们</a>
         <a href="" class="last">申请试用</a>
+    </div>
+    <div class="header min">
+        <a href="" class="logo"></a>
+        <a href="javascript:;" class="menu-option">
+            <span class="menu-option-tline"></span>
+            <span class="menu-option-bline"></span>
+        </a>
+        <div class="menu">
+            <a href="" >首页</a>
+            <a href="" >产品介绍</a>
+            <a href="" >用户版</a>
+            <a href="" >手机客户端</a>
+            <a href="" >百度司南</a>
+            <a href="" >联系我们</a>
+            <a href="" >申请试用</a>
+        </div>
     </div>
 </header>
 <div id="fullpage">
