--- a/index.html
+++ b/index.html
@@ -50,55 +50,72 @@
             <div class="hill2"></div>
             <div class="hill3"></div>
             <div class="ship"></div>
-            <div class="font"><div class="flight"></div></div>
-
         </div>
-        <div class="login">
-            <form action="">
-                <div class="user">
-                   <span></span>
-                    <input type="text" placeholder="用户名"></div>
-                <p class="error"></p>
-                <div class="pass">
-                   <span></span>
-                    <input type="password" placeholder="密码"></div>
-                <p class="error"></p>
-                <div class="toke">
-                    <input type="text" placeholder="验证码">
-                    <img src="img/cas.baidu.jpg" alt="">
-                    <a href="">换一张</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-s-hide col-m-6 aa">
+                    <div class="font"><div class="flight"></div></div>
                 </div>
-                <p class="error"></p>
-                <div class="login-sub">
-                    <input type="submit" value="登录">
-                    <div class="other">
-                        <div class="left">
-                            <span></span>
-                            <a href="">安全控件常见问题</a>
-                        </div>
-                        <div class="right">
-                            <a href="">忘记密码</a>
-                        </div>
+                <div class="col-s-12 col-m-6 bb">
+                    <div class="login">
+                        <form action="">
+                            <div class="user">
+                                <span></span>
+                                <input type="text" placeholder="用户名"></div>
+                            <p class="error"></p>
+                            <div class="pass">
+                                <span></span>
+                                <input type="password" placeholder="密码"></div>
+                            <p class="error"></p>
+                            <div class="toke">
+                                <input type="text" placeholder="验证码">
+                                <img src="img/cas.baidu.jpg" alt="">
+                                <a href="">换一张</a>
+                            </div>
+                            <p class="error"></p>
+                            <div class="login-sub">
+                                <input type="submit" value="登录">
+                                <div class="other">
+                                    <div class="left">
+                                        <span></span>
+                                        <a href="">安全控件常见问题</a>
+                                    </div>
+                                    <div class="right">
+                                        <a href="">忘记密码</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </div>
-            </form>
-        </div>
-        <a href="#" class="bottom-btn"></a>
-    </section>
-    <section>
-        <div class="center">
-            <div class="con-wrap">
-                <div class="title">
-                </div>
-                <div class="content">
-                    <h4>数据收集与处理</h4>
-                    <p>15年专业数据收集与语义分析技术积累
-                        <br>
-                        卓越极致，不断攀登</p>
                 </div>
 
             </div>
-            <div class="tree"></div>
+
+        </div>
+
+        <a href="#" class="bottom-btn"></a>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-s-12 col-m-6 ">
+                    <div class="con-wrap aa">
+                        <div class="title">
+                        </div>
+                        <div class="content">
+                            <h4>数据收集与处理</h4>
+                            <p>15年专业数据收集与语义分析技术积累
+                                <br>
+                                卓越极致，不断攀登</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-s-hide col-m-6 ">
+                    <div class="tree bb"></div>
+                </div>
+
+            </div>
 
         </div>
         <div class="page2-bottom">
@@ -118,19 +135,25 @@
             <div class="square square-4"></div>
             <div class="square square-5"></div>
         </div>
-        <div class="center">
-            <div class="con-wrap">
-                <div class="title">
+        <div class="container">
+            <div class="row">
+                <div class="col-s-12 col-m-6">
+                    <div class="con-wrap  aa">
+                        <div class="title">
+                        </div>
+                        <div class="content">
+                            <h4>舆情分析逻辑与架构</h4>
+                            <p>声量诊断、传播分析、情感提炼、受众画像
+                                <br>
+                                有方法论，更有智慧</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="content">
-                    <h4>舆情分析逻辑与架构</h4>
-                    <p>声量诊断、传播分析、情感提炼、受众画像
-                        <br>
-                        有方法论，更有智慧</p>
+                <div class="col-s-hide col-m-6 ">
+                    <div class="tree bb"></div>
                 </div>
 
             </div>
-            <div class="tree"></div>
 
         </div>
         <div class="page3-bottom">
@@ -142,19 +165,25 @@
     <section>
         <div class="top">
         </div>
-        <div class="center">
-            <div class="con-wrap">
-                <div class="title">
+        <div class="container">
+            <div class="row">
+                <div class="col-s-12 col-m-6">
+                    <div class="con-wrap  aa">
+                        <div class="title">
+                        </div>
+                        <div class="content">
+                            <h4>专业数据可视化</h4>
+                            <p>非凡的数据洞悉和可视化能力
+                                <br>
+                                精研数据，惊艳所见</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="content">
-                    <h4>专业数据可视化</h4>
-                    <p>非凡的数据洞悉和可视化能力
-                        <br>
-                        精研数据，惊艳所见</p>
+                <div class="col-s-hide col-m-6 ">
+                    <div class="tree bb"></div>
                 </div>
 
             </div>
-            <div class="tree"></div>
 
         </div>
         <a href="#" class="bottom-btn"></a>
